# rust-proto-demo

./: .env  Cargo.toml  buf.gen.yaml  docker-compose.yml
migrations/2023-10-28-124138_create_users/: up.sql
proto/: auth.proto  greeting.proto
src/: auth.rs  greeting.rs  main.rs  models.rs  schema.rs
